# Video2VR3D

./: PLANS.md  README.md  pyproject.toml
app/: main.py
app/core/: __init__.py  config.py
app/core/comfort/: __init__.py
app/core/encode/: ffmpeg_encode.py
app/core/ingest/: ffmpeg_probe.py
app/ui/: __init__.py  main_window.py
benchmarks/: cases.yaml
docs/: quality.md
scripts/: run_benchmark.py
